--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 
     <!-- SIDEBAR -->
     <aside id="sidebar">
-        <h2>Zapatillas Hombre Nike</h2>
-        <p class="textoCab">Mostrando 12 resultados</p>
+        <h1>Zapatillas Hombre Nike</h1>
+        <h2>Mostrando 12 resultados</h2>
         <br>
-        <h5>Filtrar los resultados</h5>
+        <h3>Filtrar los resultados</h3>
 
         <ul id="filtros2" class="filtros">
             <li>Marca </li>
@@ -91,7 +91,7 @@
 
             <article id="prod2" class="prodItem">
                 <img src="https://images.footlocker.com/is/image/FLEU/314217016204?wid=250&hei=250" alt="zapatillas">
-                <h5><a href="https://www.footlocker.es/es/product/nike-air-max-tuned-1-hombre-zapatillas/314217079004.html?_gl=1*1mf09ra*_up*MQ..*_ga*MTQ1MTk4NzY3My4xNzM4OTMwOTc4*_ga_2XB37BGV6G*MTczODkzMDk3Ny4xLjAuMTczODkzMDk3Ny4wLjAuMA.."
+                <h5><a href="https://www.footlocker.es/es/product/nike-air-max-tuned-1-hombre-zapatillas/314217016204.html?_gl=1*1kko8qj*_up*MQ..*_ga*MTQ1MTk4NzY3My4xNzM4OTMwOTc4*_ga_2XB37BGV6G*MTczODkzMDk3Ny4xLjAuMTczODkzMDk3Ny4wLjAuMA.."
                         target="_blank" rel="noopener">Nike
                         Air Max Tuned 1</a></h5>
                 <p class="descProd">
@@ -103,7 +103,7 @@
 
             <article id="prod3" class="prodItem">
                 <img src="https://images.footlocker.com/is/image/FLEU/314217079004?wid=250&hei=250" alt="zapatillas">
-                <h5><a href="https://www.footlocker.es/es/product/nike-air-max-tuned-1-hombre-zapatillas/314217016204.html?_gl=1*1kko8qj*_up*MQ..*_ga*MTQ1MTk4NzY3My4xNzM4OTMwOTc4*_ga_2XB37BGV6G*MTczODkzMDk3Ny4xLjAuMTczODkzMDk3Ny4wLjAuMA.."
+                <h5><a href="https://www.footlocker.es/es/product/nike-air-max-tuned-1-hombre-zapatillas/314217079004.html?_gl=1*1mf09ra*_up*MQ..*_ga*MTQ1MTk4NzY3My4xNzM4OTMwOTc4*_ga_2XB37BGV6G*MTczODkzMDk3Ny4xLjAuMTczODkzMDk3Ny4wLjAuMA.."
                         target="_blank" rel="noopener">Nike
                         Air Max Tuned 1</a></h5>
                 <p class="descProd">
@@ -258,15 +258,15 @@
                         <th>Saldo de tarjeta regalo</th>
                     </tr>
                 </table>
-            </article>
-            <article class="botones">
-                <p class="cab">Programa FLX</p>
-                <p class="textoBot">¡Envío gratuito, recompensas exclusivas y mucho más!</p>
-                <button>MÁS INFORMACIÓN</button>
-                <p class="textoBot">FLX CASH</p>
-                <button>FLX CASH</button>
-            </article>
 
+                <div class="botones">
+                    <p class="cab">Programa FLX</p>
+                    <p class="textoBot">¡Envío gratuito, recompensas exclusivas y mucho más!</p>
+                    <button>MÁS INFORMACIÓN</button>
+                    <p class="textoBot">FLX CASH</p>
+                    <button>FLX CASH</button>
+                </div>
+            </article>
         </section>
         <section>
             <article id="logoFooter">
